--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:aapt="http://schemas.android.com/aapt"
-	android:width="108dp"
-	android:height="108dp"
-	android:viewportWidth="108"
-	android:viewportHeight="108">
-	<path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-		<aapt:attr name="android:fillColor">
-			<gradient
-				android:endX="85.84757"
-				android:endY="92.4963"
-				android:startX="42.9492"
-				android:startY="49.59793"
-				android:type="linear">
-				<item
-					android:color="#44000000"
-					android:offset="0.0" />
-				<item
-					android:color="#00000000"
-					android:offset="1.0" />
-			</gradient>
-		</aapt:attr>
-	</path>
-	<path
-		android:fillColor="#FFFFFF"
-		android:fillType="nonZero"
-		android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-		android:strokeWidth="1"
-		android:strokeColor="#00000000" />
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group android:scaleX="0.14133333"
+      android:scaleY="0.14133333"
+      android:translateX="25.38"
+      android:translateY="46.862667">
+    <path
+        android:pathData="M27.98,101V38.98H29.38L62.28,101H93.92V0.76H66.34V62.92H64.94L32.04,0.76H0.4V101H27.98ZM188.45,101V77.76H138.47V59.98H184.39V40.8H138.47V24H187.05V0.76H109.91V101H188.45ZM224.35,101L229.11,85.74H265.09L269.85,101H300.23L268.87,0.76H225.47L193.97,101H224.35ZM246.47,25.82H247.87L259.35,64.74H234.99L246.47,25.82ZM339.2,101V67.96H346.34L371.26,101H404.16L374.62,65.72L375.74,65.44C390.3,62.78 400.94,51.3 400.94,34.92C400.94,14.48 384.7,0.76 360.2,0.76H309.66V101H339.2ZM339.2,22.04H355.02C364.4,22.04 371.4,27.08 371.4,35.34C371.4,43.74 364.4,48.78 355.02,48.78H339.2V22.04Z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="-8"
+            android:startY="-35"
+            android:endX="398.85"
+            android:endY="148.07"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF2F9EFD"/>
+          <item android:offset="1" android:color="#FFB852CE"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+  </group>
 </vector>
