--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Theme.Looktab" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.Looktab" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
-		<item name="colorOnPrimary">@color/white</item>
+		<item name="colorPrimary">@color/teal_700</item>
+		<item name="colorPrimaryVariant">@color/purple_200</item>
+		<item name="colorOnPrimary">@color/background</item>
 		<!-- Secondary brand color. -->
 		<item name="colorSecondary">@color/teal_200</item>
 		<item name="colorSecondaryVariant">@color/teal_700</item>
 		<item name="colorOnSecondary">@color/black</item>
 		<!-- Status bar color. -->
-		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+		<item name="android:statusBarColor" tools:targetApi="l">@color/ic_launcher_background</item>
 		<!-- Customize your theme here. -->
+		<item name="android:fontFamily" tools:targetApi="jelly_bean">@font/montserrat</item>
 	</style>
+
+
+<!--	<style name = "NoActionBar" parent = "@android:style/Theme.Holo.Light">-->
+<!--		<item name = "android:windowActionBar">false</item>-->
+<!--		<item name = "android:windowNoTitle">true</item>-->
+<!--	</style>-->
+
 </resources>
