--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,13 +12,6 @@
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">@color/ic_launcher_background</item>
 		<!-- Customize your theme here. -->
-		<item name="android:fontFamily" tools:targetApi="jelly_bean">@font/montserrat</item>
+		<item name="android:fontFamily" tools:targetApi="jelly_bean">@font/montserrat_bold</item>
 	</style>
-
-
-<!--	<style name = "NoActionBar" parent = "@android:style/Theme.Holo.Light">-->
-<!--		<item name = "android:windowActionBar">false</item>-->
-<!--		<item name = "android:windowNoTitle">true</item>-->
-<!--	</style>-->
-
 </resources>
