--- a/app/src/main/res/layout/fragment_review_history.xml
+++ b/app/src/main/res/layout/fragment_review_history.xml
@@ -12,21 +12,11 @@
 	</data>
 
 
-	<FrameLayout
+	<androidx.appcompat.widget.LinearLayoutCompat
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:background="@color/gray50"
 		android:fitsSystemWindows="true"
 		android:orientation="vertical">
-		<FrameLayout
-			android:id="@+id/fragment_container"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent" />
-
-		<FrameLayout
-			android:id="@+id/out_fragment_container"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent" />
-
-	</FrameLayout>
+	</androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
