--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<data>
 
@@ -15,18 +13,62 @@
 	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/gray50"
 		android:fitsSystemWindows="true"
 		android:orientation="vertical">
+
 		<FrameLayout
 			android:id="@+id/fragment_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent" />
 
+		<androidx.appcompat.widget.LinearLayoutCompat
+			android:layout_width="match_parent"
+			android:layout_height="80dp"
+			android:layout_gravity="bottom"
+			android:background="@color/gray700"
+			android:weightSum="3">
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_weight="1"
+				android:drawableTop="@drawable/btn_checkin"
+				android:gravity="center"
+				android:text="@string/my_check_in"
+				android:textColor="@color/btn_text_colors" />
+
+			<FrameLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_weight="1">
+
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center"
+					android:background="@drawable/ic_home_circle_btn"
+					android:gravity="center"
+					android:padding="16dp"
+					android:src="@drawable/ic_home_ar_btn" />
+			</FrameLayout>
+
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center"
+				android:layout_weight="1"
+				android:drawableTop="@drawable/btn_mypage"
+				android:gravity="center"
+				android:text="@string/my_page"
+				android:textColor="@color/btn_text_colors" />
+		</androidx.appcompat.widget.LinearLayoutCompat>
+
 		<FrameLayout
 			android:id="@+id/out_fragment_container"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent" />
-
 	</FrameLayout>
 </layout>
