--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<data>
 
@@ -9,12 +7,47 @@
 			name="viewModel"
 			type="com.looktabinc.feature.main.MainViewModel" />
 
+		<import type="com.looktabinc.feature.main.MainViewModel.ViewFlow"/>
 	</data>
 
-	<androidx.core.widget.NestedScrollView
+	<androidx.appcompat.widget.LinearLayoutCompat
 		android:layout_width="match_parent"
-		android:layout_height="match_parent">
+		android:layout_height="match_parent"
+		android:layout_gravity="bottom"
+		android:background="@color/gray900"
+		android:clickable="true"
+		android:focusable="true"
+		android:orientation="vertical"
+		android:weightSum="3">
 
-	</androidx.core.widget.NestedScrollView>
+		<androidx.appcompat.widget.LinearLayoutCompat
+			android:layout_width="match_parent"
+			android:layout_height="215dp"
+			android:background="@drawable/border_bottom"
+			android:orientation="vertical">
+
+			<ImageView
+				android:layout_width="120dp"
+				android:layout_height="120dp"
+				android:layout_gravity="center"
+				android:layout_marginTop="48dp"
+				android:background="@drawable/ic_home_circle_btn" />
+		</androidx.appcompat.widget.LinearLayoutCompat>
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="8dp"
+			android:background="@color/black" />
+
+		<androidx.appcompat.widget.AppCompatButton
+			style="@style/MyPageButton"
+			android:onClick="@{() -> viewModel.setViewFlow(ViewFlow.AIRDROP_SETTING)}"
+			android:text="@string/airdrop_alarm_setting" />
+
+		<androidx.appcompat.widget.AppCompatButton
+			style="@style/MyPageButton"
+			android:onClick="@{() -> viewModel.setViewFlow(ViewFlow.REVIEW_HISTORY)}"
+			android:text="@string/my_review_history" />
+	</androidx.appcompat.widget.LinearLayoutCompat>
 
 </layout>
