--- a/app/src/main/res/values/typography.xml
+++ b/app/src/main/res/values/typography.xml
@@ -21,6 +21,11 @@
 		<item name="android:textColor">@android:color/black</item>
 	</style>
 
+	<style name="Typography.Medium" parent="@android:style/Widget.DeviceDefault.TextView">
+		<item name="android:fontFamily">@font/montserrat_medium</item>
+		<item name="android:includeFontPadding">false</item>
+		<item name="android:textColor">@android:color/black</item>
+	</style>
 	<style name="Typography.Regular" parent="@android:style/Widget.DeviceDefault.TextView">
 		<item name="android:fontFamily">@font/montserrat_regular</item>
 		<item name="android:includeFontPadding">false</item>
