--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
 		<item name="android:textAppearance">@style/Typography.Medium</item>
 		<item name="android:drawableEnd">@drawable/ic_next</item>
 	</style>
+	<style name="Title" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">16dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Medium</item>
+	</style>
 </resources>
