--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,52 @@
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textAppearance">@style/Typography.Medium</item>
 	</style>
+
+	<style name="AirDropSelectTitle" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:textSize">20dp</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">@style/Typography.Bold</item>
+	</style>
+
+	<style name="JoinStyle3Layout">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginTop">8dp</item>
+		<item name="android:weightSum">3</item>
+	</style>
+
+	<style name="JoinStyleLayout">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_margin">4dp</item>
+		<item name="android:paddingStart">6dp</item>
+		<item name="android:paddingEnd">6dp</item>
+		<item name="android:layout_weight">1</item>
+	</style>
+
+	<style name="JoinStyleImgLayout">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:orientation">vertical</item>
+		<item name="android:padding">1dp</item>
+	</style>
+
+	<style name="JoinStyleImgCheck" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">16dp</item>
+		<item name="android:layout_height">16dp</item>
+		<item name="android:layout_margin">8dp</item>
+		<item name="android:src">"@drawable/ic_checkbox_off"</item>
+	</style>
+
+	<style name="JoinStyleText" parent="Widget.AppCompat.TextView">
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_marginTop">8dp</item>
+		<item name="android:gravity">center</item>
+		<item name="android:textSize">16dp</item>
+		<item name="android:textAppearance">@style/Typography.Regular</item>
+
+	</style>
 </resources>
