--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -67,6 +67,12 @@
 		<item name="android:gravity">center</item>
 		<item name="android:textSize">16dp</item>
 		<item name="android:textAppearance">@style/Typography.Regular</item>
-
 	</style>
+	<style name="BasicLayout" >
+		<item name="android:layout_width">match_parent</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:orientation">vertical</item>
+		<item name="android:padding">20dp</item>
+	</style>
+
 </resources>
