--- a/app/src/main/res/layout/fragment_airdrop_setting.xml
+++ b/app/src/main/res/layout/fragment_airdrop_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<data>
 
@@ -16,7 +17,33 @@
 		<androidx.appcompat.widget.LinearLayoutCompat
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:background="@color/gray900"
 			android:orientation="vertical">
+
+
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:layout_width="match_parent"
+				android:layout_height="60dp">
+
+				<androidx.appcompat.widget.AppCompatTextView
+					style="@style/Title"
+					android:text="@string/my_review_history"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<ImageView
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="12dp"
+					android:onClick="@{() -> viewModel.onClickAirDropFragmentEvent(viewModel.close)}"
+					android:src="@drawable/ic_back"
+					android:text="@string/my_review_history"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+			</androidx.constraintlayout.widget.ConstraintLayout>
 
 			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
@@ -33,21 +60,18 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content" />
 			</androidx.appcompat.widget.LinearLayoutCompat>
-		</androidx.appcompat.widget.LinearLayoutCompat>
 
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="8dp"
-			android:background="@color/black" />
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="8dp"
+				android:background="@color/black" />
 
-		<androidx.appcompat.widget.LinearLayoutCompat
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
 
 			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="@drawable/border_bottom"
+				android:orientation="vertical"
 				android:padding="20dp">
 
 				<androidx.appcompat.widget.AppCompatTextView
@@ -58,21 +82,17 @@
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content" />
 			</androidx.appcompat.widget.LinearLayoutCompat>
-		</androidx.appcompat.widget.LinearLayoutCompat>
 
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="8dp"
-			android:background="@color/black" />
-
-		<androidx.appcompat.widget.LinearLayoutCompat
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content">
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="8dp"
+				android:background="@color/black" />
 
 			<androidx.appcompat.widget.LinearLayoutCompat
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:background="@drawable/border_bottom"
+				android:orientation="vertical"
 				android:padding="20dp">
 
 				<androidx.appcompat.widget.AppCompatTextView
