--- a/app/src/main/res/layout/layout_picture.xml
+++ b/app/src/main/res/layout/layout_picture.xml
@@ -12,23 +12,23 @@
 			android:id="@+id/layout_item_shop"
 			style="@style/JoinStyleLayout">
 
-			<ImageView
-				android:id="@+id/iv_item_shop"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:adjustViewBounds="true"
-				android:src="@drawable/img_shop"
-				app:layout_constraintTop_toTopOf="parent" />
 
 			<androidx.appcompat.widget.LinearLayoutCompat
-				android:layout_width="0dp"
+				android:id="@+id/iv_item_shop"
+				android:layout_width="match_parent"
 				android:layout_height="0dp"
 				android:adjustViewBounds="true"
 				android:background="@drawable/box_focused"
-				app:layout_constraintBottom_toBottomOf="@id/iv_item_shop"
-				app:layout_constraintEnd_toEndOf="@id/iv_item_shop"
-				app:layout_constraintStart_toStartOf="@id/iv_item_shop"
-				app:layout_constraintTop_toTopOf="@id/iv_item_shop" />
+				app:layout_constraintTop_toTopOf="parent">
+
+				<ImageView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:adjustViewBounds="true"
+					android:padding="3dp"
+					android:src="@drawable/img_shop" />
+
+			</androidx.appcompat.widget.LinearLayoutCompat>
 
 			<androidx.appcompat.widget.AppCompatImageView
 				style="@style/JoinStyleImgCheck"
@@ -47,23 +47,22 @@
 			android:id="@+id/layout_item_food"
 			style="@style/JoinStyleLayout">
 
-			<ImageView
-				android:id="@+id/iv_item_food"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:adjustViewBounds="true"
-				android:src="@drawable/img_food"
-				app:layout_constraintTop_toTopOf="parent" />
 
 			<androidx.appcompat.widget.LinearLayoutCompat
-				android:layout_width="0dp"
+				android:id="@+id/iv_item_food"
+				android:layout_width="match_parent"
 				android:layout_height="0dp"
 				android:adjustViewBounds="true"
 				android:background="@drawable/box_focused"
-				app:layout_constraintBottom_toBottomOf="@id/iv_item_food"
-				app:layout_constraintEnd_toEndOf="@id/iv_item_food"
-				app:layout_constraintStart_toStartOf="@id/iv_item_food"
-				app:layout_constraintTop_toTopOf="@id/iv_item_food" />
+				app:layout_constraintTop_toTopOf="parent">
+
+				<ImageView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:adjustViewBounds="true"
+					android:padding="3dp"
+					android:src="@drawable/img_food" />
+			</androidx.appcompat.widget.LinearLayoutCompat>
 
 			<androidx.appcompat.widget.AppCompatImageView
 				style="@style/JoinStyleImgCheck"
@@ -82,23 +81,21 @@
 			android:id="@+id/layout_item_selfy"
 			style="@style/JoinStyleLayout">
 
-			<ImageView
+			<androidx.appcompat.widget.LinearLayoutCompat
 				android:id="@+id/iv_item_selfy"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:adjustViewBounds="true"
-				android:src="@drawable/img_selfy"
-				app:layout_constraintTop_toTopOf="parent" />
-
-			<androidx.appcompat.widget.LinearLayoutCompat
-				android:layout_width="0dp"
 				android:layout_height="0dp"
 				android:adjustViewBounds="true"
 				android:background="@drawable/box_focused"
-				app:layout_constraintBottom_toBottomOf="@id/iv_item_selfy"
-				app:layout_constraintEnd_toEndOf="@id/iv_item_selfy"
-				app:layout_constraintStart_toStartOf="@id/iv_item_selfy"
-				app:layout_constraintTop_toTopOf="@id/iv_item_selfy" />
+				app:layout_constraintTop_toTopOf="parent">
+
+				<ImageView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:adjustViewBounds="true"
+					android:padding="3dp"
+					android:src="@drawable/img_selfy" />
+			</androidx.appcompat.widget.LinearLayoutCompat>
 
 			<androidx.appcompat.widget.AppCompatImageView
 				style="@style/JoinStyleImgCheck"
