--- a/app/src/main/res/layout/fragment_review_history.xml
+++ b/app/src/main/res/layout/fragment_review_history.xml
@@ -49,6 +49,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			tools:itemCount="10"
+			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 			tools:listitem="@layout/item_review"/>
 	</androidx.appcompat.widget.LinearLayoutCompat>
 
